[email-verification] user email check before sign up
